display translation result by injecting DOM element instead of popup notification

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "__MSG_extensionName__",
     "description": "__MSG_extensionDescription__",
-    "version": "0.1",
+    "version": "0.2",
     "author": "Eason Lee, azusa_go@hotmail.com",
     "default_locale": "en",
     "browser_specific_settings": {
@@ -14,7 +14,12 @@
     "background": {
       "scripts": ["background.js"]
     },
-    
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "js": ["content-script.js"]
+      }
+    ],
     "permissions": [
       "contextMenus",
       "activeTab",
